# vividus

./: .gitignore  Cargo.toml  README.md
iced/: Cargo.toml
iced/src/: Notes.md  gui.rs  main.rs
tauri/vividus/: Notes.md  README.md  package.json
tauri/vividus/src/: App.tsx
tauri/vividus/src-tauri/: Cargo.toml  tauri.conf.json
tauri/vividus/src-tauri/src/: main.rs
