[package]
name = "vividus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.10", features = ["image"] }
# image = "0.23.14"
async-std = "1.10.0"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"


